@@ -105,6 +105,9 @@
 #define DOACTION    "/_doaction"
 #define FAVICON     "/favicon.ico"
 
+// Limit for the viewlog response
+#define VIEWLOG_LIMIT 1048576
+
 
 typedef enum {
         TXT = 0,
@@ -726,6 +729,8 @@ static void doGet(HttpRequest req, HttpResponse res) {
                 print_summary(req, res);
         } else if (ACTION(REPORT)) {
                 _printReport(req, res);
+        } else if (ACTION(VIEWLOG)) {
+                do_viewlog(req, res);
         } else {
                 handle_service(req, res);
         }
@@ -1077,9 +1082,11 @@ static void do_viewlog(HttpRequest req, HttpResponse res) {
                 FILE *f = fopen(Run.files.log, "r");
                 if (f) {
                         size_t n;
+                        size_t total = 0;
                         char buf[512];
                         StringBuffer_append(res->outputbuffer, "<br><p><form><textarea cols=120 rows=30 readonly>");
-                        while ((n = fread(buf, sizeof(char), sizeof(buf) - 1, f)) > 0) {
+                        while (total < VIEWLOG_LIMIT && (n = fread(buf, sizeof(char), sizeof(buf) - 1, f)) > 0) {
+                                total += n;
                                 buf[n] = 0;
                                 escapeHTML(res->outputbuffer, buf);
                         }
